--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,6 +83,9 @@ const jobs = [
         <p class="text-sm text-neutral-300 leading-relaxed">
           Hi! I'm Henry, an <strong class="text-white font-semibold">Industrial Engineer</strong> and Data Analyst.
         </p>
+        <p>
+        Evaluate the situation with detail, do the right questions, measure the right KPI's and lead the team towards goal efficiently, that makes me an interesting asset for your company
+        </p>
         <p class="text-sm text-neutral-300 leading-relaxed">
           I specialize in <strong class="text-blue-400 font-semibold">leading high-performance teams</strong> to build automations.
         </p>
