--- a/src/layouts/BasicLayout.astro
+++ b/src/layouts/BasicLayout.astro
@@ -52,7 +52,15 @@ const schema = page !== "blog"
     <meta content={Astro.generator} name="generator" />
     <title>{title}</title>
     <meta content={description} name="description" />
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BQD50XSC22"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BQD50XSC22');
+</script>
     <link rel="preconnect" href="https://cdn.fontshare.com" crossorigin="anonymous" />
     <link rel="preconnect" href="https://api.fontshare.com" crossorigin="anonymous" />
 
